# modorganizer-installer_wizard

./: .gitignore  CMakeLists.txt  README.md  installer_wizard_en.ts  make-release.ps1  make.ps1  plugin-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linters.yml
src/: CMakeLists.txt  __init__.py  dialog.py  installer.py  installer_wizard_en.ts  runner.py  utils.py
src/ui/: wizardinstallercomplete.ui  wizardinstallerdialog.ui  wizardinstallererror.ui  wizardinstallerpage.ui  wizardinstallerrequires.ui
