[tool.poetry]
name = "installer-wizard"
version = "1.0.3"
description = ""
authors = ["Mikaël Capelle <capelle.mikael@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.0"
bain-wizard-interpreter = "1.0.4"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.365"
ruff = "^0.2.1"
types-psutil = "^5.9.5.20240516"
poethepoet = "^0.23.0"
mobase-stubs = { version = "2.5.1a0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format-imports = "ruff check --select I . --fix"
format-ruff = "ruff format ."
format.sequence = ["format-imports", "format-ruff"]
lint-ruff = "ruff check ."
lint-ruff-format = "ruff format --check ."
lint-pyright = "pyright ."
lint.sequence = ["lint-ruff", "lint-ruff-format", "lint-pyright"]
lint.ignore_fail = "return_non_zero"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.ruff.lint.isort.sections]
mobase = ["mobase"]
wizard = ["wizard"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "wizard",
    "mobase",
    "local-folder",
]

[tool.pyright]
exclude = ["lib", "venv", "src/ui"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportMissingModuleSource = false
